fixed horizontal scrolling in what-to-do section

--- a/client/src/components/FeaturedIndicatorView.css
+++ b/client/src/components/FeaturedIndicatorView.css
@@ -62,6 +62,10 @@
     padding-bottom: 2em;
 }
 
+#what-to-do h3 {
+    font-size: 2.5em;
+}
+
 #action-intro, #action-detail {
     text-align: left;
 }
